<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">7 Minutes With The Lord</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="start">START</string>
    <string name="title">7 Minutes With The Lord</string>
    <string name="exit">EXIT</string>

    <string name="calling">Calling on the Name of the Lord</string>
    <string name="calling_desc">Calling on the Name of the Lord to set our mind on the spirit &#8211; 1 Cor.12:3; Rom. 8:6; 10:12&#8211;13</string>

    <string name="praying">Praying</string>
    <string name="praying_desc">Opening our heart, softening our heart and emptying ourselves. Telling Him that we love Him &#8211; 2 Cor. 3:16; Psa. 62:8</string>

    <string name="pray_reading">Pray-reading</string>
    <string name="pray_reading_desc">Using our exercised spirit to pray over a verse or two. Turning the verses into a personal prayer &#8211; Eph. 6:17&#8211;18; 2 Tim. 3:16</string>

    <string name="confession">Confession</string>
    <string name="confession_desc">Confessing the sins and offenses on our conscience and removing all blockages to fellowship. Asking for forgiveness and cleansing &#8211; 1 John 1:7, 9; Psa. 66:18; Isa. 59:1&#8211;2</string>

    <string name="consecration">Consecration</string>
    <string name="consecration_desc">Presenting ourselves to the Lord afresh, giving Him the full ground in us &#8211; Rom. 12:1&#8211;2; 6:13,19; Mark 12:30</string>

    <string name="thanksgiving">Thanksgiving</string>
    <string name="thanksgiving_desc">Giving thanks for all things; for all the persons, situations and things in your life and praising Him &#8211; Eph. 5:20; 1 Thes. 5:18</string>

    <string name="petition">Petition</string>
    <string name="petition_desc">Asking the Lord for needs, growth and persons that need salvation &#8211; 1 Tim. 2:1: Eph. 6:18; Matt. 7:7; Psa. 143:8</string>

    <string name="the_end">End</string>
    <string name="halelujah">Hallelujah</string>
    <string name="reset">RESTART</string>
    <string name="stop">STOP</string>

    <string name="forward"> Forward </string>
    <string name="backward"> Backward </string>
    <string name="pause"> PAUSE </string>
    <string name="unpause"> CONTINUE </string>

    <string name="desc"> desc </string>

    <string name="alert">[Jesus] said&#8230; \'So were you not able to watch with Me for &#160;<b>%1$s more minutes?</b> Watch and pray that you may not enter into temptation. The spirit is willing, but the flesh is weak.\' (Matt. 26:40b&#8211;41)</string>

    <string name="number_7"> 7 </string>
    <string name="number_65"> 6.5 </string>
    <string name="number_55"> 5.5 </string>
    <string name="number_3"> 3 </string>
    <string name="number_2"> 2 </string>
    <string name="number_15"> 1.5 </string>
    <string name="number_1"> 1 </string>

    <string name="select_language">Select Language</string>
    <string name="force_exit">EXIT ANYWAY</string>

    <string name="title_activity_pray">PrayActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="chinese_traditional">中文(繁體)</string>
    <string name="chinese_language">中文(简体)</string>
    <string name="deutsch_language">Deutsch</string>
    <string name="english_us">English (US)</string>
    <string name="korean">한국어</string>
    <string name="portuguese">Portuguese</string>
    <string name="spanish">Spanish</string>
    <string name="tagalog">Tagalog</string>
    <string name="russian">Russian</string>
    <string name="ukrainian">Ukrainian</string>

</resources>